Fix <pre> overflow-x

--- a/css/nerd.css
+++ b/css/nerd.css
@@ -1,6 +1,6 @@
-#chartContainer {
-  width: 100%;
-  height: 400px;
+pre {
+  overflow-x: auto;
+  -webkit-overflow-scrolling: touch;
 }
 
 /* Custom CSS */
